[package]
name = "node_ownership_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["full"] }
console-subscriber = "0.4.0"
meansd = "2.1.0"
async-trait = "0.1.83"
